watch/jellyseerr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
  labels:
    app: jellyseerr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyseerr
  template:
    metadata:
      labels:
        app: jellyseerr
    spec:
      containers:
        - name: jellyseerr
          image: fallenbagel/jellyseerr:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 5055
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
            limits:
              cpu: "1"
              memory: 512Mi
          volumeMounts:
            - mountPath: /app/config
              name: config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyseerr-config

---
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  labels:
    app: jellyseerr
spec:
  selector:
    app: jellyseerr
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
